--- a/src/components/navigation bar/Nav.module.css
+++ b/src/components/navigation bar/Nav.module.css
@@ -1,12 +1,10 @@
 .nav {
     position: fixed;
-    top: 79px; left: 58px;
-    text-align: left;
+    top: 79px;
+    left: 55px;
     color: white;
-    object-fit: cover;
     height: 1000px;
-    width: 500px;
-    font-family: "Archivo Black";
+    font-family: "Archivo Black", sans-serif;
     font-size: 1.5rem;
     padding: 50px 0 0 35px;
     grid-area: n;
@@ -15,4 +13,26 @@
 
 .nav img {
     width: 100px;
+}
+
+.item {
+    height: 60px;
+}
+
+.item a {
+    text-decoration: none;
+    color: darkorange;
+}
+
+.item a:hover {
+    margin: 10px;
+    text-decoration: none;
+    color: brown;
+}
+
+.textblock {
+    position: absolute;
+    text-align: left;
+    top: 90px;
+    left: 140px;
 }
