--- a/src/components/content/about/About.module.css
+++ b/src/components/content/about/About.module.css
@@ -8,6 +8,7 @@
 .heading {
     color: darkorange;
     font-family: "Archivo Black", sans-serif;
+    text-decoration: none;
     font-size: 4rem;
     margin: 10px;
 }
