--- a/src/components/content/quotes/OneQuote.module.css
+++ b/src/components/content/quotes/OneQuote.module.css
@@ -9,3 +9,16 @@
     width: 100%;
     height: 200px;
 }
+
+.text {
+    margin: 10px;
+}
+
+.author {
+    margin: 10px;
+    color: darkorange;
+}
+
+.textblock {
+    padding-top: 40px;
+}
