--- a/src/components/content/watch/player/scrollItems/ScrollItems.module.css
+++ b/src/components/content/watch/player/scrollItems/ScrollItems.module.css
@@ -1,6 +1,6 @@
 .container {
+    grid-area: c;
     display: flex;
-    justify-content: center;
     overflow-x: auto;
 }
 .container::-webkit-scrollbar {
@@ -11,5 +11,11 @@
 .container::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #FF8800;
+    background-color: darkorange;
+}
+
+.container::-webkit-scrollbar-thumb:hover{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: brown;
 }
