--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-wrapper {
     position: relative;
     margin: 0 auto;
-    width: 100%;
+    width: 100vw;
     height: 3000px;
     display: grid;
     background-color: black;
@@ -12,9 +12,14 @@
 
     grid-template-rows: 90px 230px 1fr;
     grid-template-columns: 0.5fr 180px 850px 0.5fr 0.5fr;
-    grid-gap: 10px;
 }
-
+.loading {
+    display: flex;
+    height: 900px;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
